--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <script src="js/main.js">
-      1
-    </script>
+    <script src="js/main.js"></script>
   </body>
 </html>
