--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
+<!--    start home      -->
+<!--    end home     -->
         
 
 
